# rssa-recommender

./: README.md  pyproject.toml
src/rssa_recommender/common/: logging_config.py  mf_base.py  schemas.py  utils.py
src/rssa_recommender/core/: handler.py  interfaces.py  standard_adapters.py
src/rssa_recommender/services/biased_mf_recs/: __init__.py  main.py  service.py
